added registration view, validation attributes to model, filled model properties out, modified login page to show password, changed routes (needs to be fixed to show login properly)

--- a/Minesweeper/Minesweeper/Views/Manage/ManageLogins.cshtml
+++ b/Minesweeper/Minesweeper/Views/Manage/ManageLogins.cshtml
@@ -21,7 +21,7 @@
     {
         if (Model.CurrentLogins.Count > 0)
         {
-            <h4>Registered Logins</h4>
+            <h4>Registered CheckUserCredss</h4>
             <table class="table">
                 <tbody>
                     @foreach (var account in Model.CurrentLogins)
