--- a/Minesweeper/Minesweeper/Views/Register/Register.cshtml
+++ b/Minesweeper/Minesweeper/Views/Register/Register.cshtml
@@ -16,8 +16,8 @@
     @Scripts.Render("~/bundles/jqueryval")
     
     
-@using (Html.BeginForm("Register", "Register", FormMethod.Post))
-{
+    @using (Html.BeginForm("Register","Register",FormMethod.Post)) 
+    {
         @Html.AntiForgeryToken()
         
         <div class="form-horizontal">
@@ -73,6 +73,14 @@
             </div>
     
             <div class="form-group">
+                @Html.LabelFor(model => model.Age, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group">
                 @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
@@ -89,7 +97,7 @@
     }
     
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "Index", "Login")
     </div>
 </body>
 </html>
