added notification to user for login and registration

--- a/Minesweeper/Minesweeper/Views/Register/RegisterSuccess.cshtml
+++ b/Minesweeper/Minesweeper/Views/Register/RegisterSuccess.cshtml
@@ -11,7 +11,8 @@
     <title>RegisterSuccess</title>
 </head>
 <body>
-    <div> 
-    </div>
+<div>
+    Successfully Registered
+</div>
 </body>
 </html>
