--- a/Minesweeper/Minesweeper/Views/Login/Login.cshtml
+++ b/Minesweeper/Minesweeper/Views/Login/Login.cshtml
@@ -6,10 +6,7 @@
 
 <h2>Login</h2>
 
-
-
-@using (Html.BeginForm("Login", "Login", FormMethod.Post))
-{
+@using (Html.BeginForm("Login", "Login", FormMethod.Post)){
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
