--- a/Minesweeper/Minesweeper/Views/Login/LoginPassed.cshtml
+++ b/Minesweeper/Minesweeper/Views/Login/LoginPassed.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Minesweeper.Models.UserModel
+
 @{
     Layout = null;
 }
@@ -8,11 +9,23 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>LoginPassed</title>
+    <title>Login Success</title>
 </head>
 <body>
     <div>
-        Login Passed.
+        <h4>UserModel</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                
+                Welcome @Html.DisplayFor(model => model.Username)
+            </dt>
+    
+        </dl>
     </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+        @Html.ActionLink("Back to List", "Register", "Register")
+    </p>
 </body>
 </html>
