Added ability to go between Login and Registration through link.

--- a/Minesweeper/Minesweeper/Views/Register/Register.cshtml
+++ b/Minesweeper/Minesweeper/Views/Register/Register.cshtml
@@ -97,7 +97,7 @@
     }
     
     <div>
-        @Html.ActionLink("Back to List", "Index", "Login")
+        @Html.ActionLink("Sign In", "Index", "Login")
     </div>
 </body>
 </html>
