--- a/Minesweeper/Minesweeper/Views/Login/Login.cshtml
+++ b/Minesweeper/Minesweeper/Views/Login/Login.cshtml
@@ -38,7 +38,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Sign Up", "Index", "Register")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
