--- a/Minesweeper/Minesweeper/Views/Login/LoginPassed.cshtml
+++ b/Minesweeper/Minesweeper/Views/Login/LoginPassed.cshtml
@@ -19,13 +19,13 @@
             <dt>
                 
                 Welcome @Html.DisplayFor(model => model.Username)
+               
             </dt>
     
         </dl>
     </div>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-        @Html.ActionLink("Back to List", "Register", "Register")
+        @Html.ActionLink("Sign Out", "Index", "Login")
     </p>
 </body>
 </html>
