fixed win route and typo

--- a/Minesweeper/Minesweeper/Views/Game/Game.cshtml
+++ b/Minesweeper/Minesweeper/Views/Game/Game.cshtml
@@ -116,7 +116,7 @@
                 alert("You Won");
             }
 
-            if (confirm("Start New Game")) {
+            if (confirm("Start New Game?")) {
                 window.location = "/Game";
             }
 
