--- a/Minesweeper/Minesweeper/Views/Register/RegisterFailed.cshtml
+++ b/Minesweeper/Minesweeper/Views/Register/RegisterFailed.cshtml
@@ -11,7 +11,9 @@
     <title>RegisterFailed</title>
 </head>
 <body>
-    <div> 
-    </div>
+<div>
+    Registration Failed: Username Taken. <br/>
+    @Html.ActionLink("Try Again","Register","Register")
+</div>
 </body>
 </html>
