--- a/Minesweeper/Minesweeper/Views/Shared/NavbarPartialView.cshtml
+++ b/Minesweeper/Minesweeper/Views/Shared/NavbarPartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="navbar navbar-inverse navbar-fixed-top">
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="/Game">Retry</a></li>
+        <li><a href="#" onclick="if (confirm('Are You Sure?')) { resetGame();}">Retry</a></li>
         <li>@Html.ActionLink("Log Out", "Index", "Login", new { }, new { })</li>
     </ul>
 </div>
