--- a/Minesweeper/Minesweeper/Views/Shared/Timer.cshtml
+++ b/Minesweeper/Minesweeper/Views/Shared/Timer.cshtml
@@ -1,2 +1,7 @@
-﻿
-
+﻿@model int
+<div class="container" align="center" style="margin-top: 5%">
+    <h3 id="timer">
+       @Model<br>
+        Seconds
+    </h3>
+</div>
