refactored from view to controller to take id

--- a/Minesweeper/Minesweeper/Views/Register/RegisterFailed.cshtml
+++ b/Minesweeper/Minesweeper/Views/Register/RegisterFailed.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div>
-    Registration Failed: Username Taken. <br/>
+    Registration Failed: ID Taken. <br/>
     @Html.ActionLink("Try Again","Register","Register")
 </div>
 </body>
